--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ logging:
   level:
     com.example.springsecuritydemo: DEBUG
 spring:
+  main:
+    allow-bean-definition-overriding: true
   thymeleaf:
     cache: false
     prefix: file:src/main/resources/templates/
@@ -27,6 +29,6 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
 
 app:
-  jwtSecret: 1a2b3c4d
-  jwtExpirationInMs: 3600
-  refreshExpirationInMs: 7200
+  jwtSecret: 1a2b3c4dH(@$HG*)JGKL:LG:J_+G$@}O{{WOB|@$_(B@|\\b@$|jH()@$H)HONGJN"G$@"FJI;:0fJ:G@$JIjg90hHG*)@$H)GIFMVNBH$H@)G@$G)F)N@OK$GMIHG*)H@$*)G)*WDNVWDNOVL!N)G$@)*GH
+  jwtExpirationInMs: 30000
+  refreshExpirationInMs: 60000
