token reissue 기능 추가 중 login error 출력 오류 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,12 @@ logging:
   level:
     com.example.springsecuritydemo: DEBUG
 spring:
+  security:
+    filter:
+      order: -100 # Set a high order to ensure this filter runs last
+    persist:
+      # Disable SecurityContext persistence
+      security-context: false
   main:
     allow-bean-definition-overriding: true
   thymeleaf:
