--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,5 +36,5 @@ spring:
 
 app:
   jwtSecret: 1a2b3c4dH(@$HG*)JGKL:LG:J_+G$@}O{{WOB|@$_(B@|\\b@$|jH()@$H)HONGJN"G$@"FJI;:0fJ:G@$JIjg90hHG*)@$H)GIFMVNBH$H@)G@$G)F)N@OK$GMIHG*)H@$*)G)*WDNVWDNOVL!N)G$@)*GH
-  jwtExpirationInMs: 5000
-  refreshExpirationInMs: 10000
+  jwtExpirationInMs: 600000
+  refreshExpirationInMs: 6000000
